# Sampling-Tool

./: .gitattributes  .gitignore  CLAUDE.md  PERFORMANCE.md  README.md  pyproject.toml  sampling_tool.spec
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
REVIEW/: REVIEW_PERFORMANCE.md  REVIEW_QUALITY.md  REVIEW_STRUCTURE.md  REVIEW_TESTS.md
docs/: ADMIN_GUIDE.md  INSTALL_USER.md  USER_GUIDE.md
docs/superpowers/plans/: 2026-05-20-sprint-19-distinct-and-splits.md
docs/superpowers/specs/: 2026-05-20-sprint-19-distinct-and-splits-design.md
resources/icons/: app.icns
scripts/: build_app.py  demo_full_workflow.py  generate_app_icon.py  generate_placeholder_briefpapier.py  perf_probe.py
src/sampling_tool/: __init__.py  __main__.py  config.py  resources.py
src/sampling_tool/audit/: __init__.py  logger.py
src/sampling_tool/core/: __init__.py  cancellation.py  formatting.py  models.py  rng.py  sampling.py  undo.py
src/sampling_tool/io/: __init__.py  briefpapier.py  charts.py  exporter.py  html_report.py  importer.py  multi_report_exporter.py  pdf_report.py
src/sampling_tool/persistence/: __init__.py  _json.py  audit_repo.py  database.py  dataset_repo.py  engagement_repo.py  engagement_state_repo.py  repositories.py  sample_repo.py  undo_repo.py  version_manager.py
src/sampling_tool/persistence/migrations/: 001_initial.sql  002_engagement_state.sql
src/sampling_tool/resources/templates/: audit_report.html
src/sampling_tool/ui/: __init__.py  _window_layout.py  _window_menu.py  _window_state.py  _window_toolbar.py  main_window.py  recent.py  settings_store.py
src/sampling_tool/ui/controllers/: __init__.py  _factories.py  engagement_controller.py  export_controller.py  help_controller.py  main_controller.py  selection_controller.py  workspace_controller.py  workspace_session.py
src/sampling_tool/ui/dialogs/: __init__.py  _export_base.py  about_dialog.py  bug_report_dialog.py  duplicate_engagement_dialog.py  export_audit_pdf_dialog.py  export_excel_report_dialog.py  export_html_report_dialog.py  export_sample_dialog.py  first_run_wizard.py  import_options_dialog.py  new_engagement_dialog.py  progress_dialog.py  sampling_dialog.py  settings_dialog.py
src/sampling_tool/ui/styles/: bdo_light.qss
src/sampling_tool/ui/widgets/: __init__.py  audit_trail_view.py  chart_renderer.py  dashboard_view.py  data_table.py  sidebar.py  welcome.py
src/sampling_tool/ui/workers/: __init__.py  task_worker.py  tasks.py
tests/: conftest.py
tests/integration/: test_audit_logger.py  test_briefpapier.py  test_database.py  test_db_performance_helpers.py  test_distinct_values.py  test_engagement_state_repo.py  test_exporter.py  test_format_consistency.py  test_html_report.py  test_importer.py  test_multi_report_exporter.py  test_pdf_report.py  test_perf_probe_runs.py  test_repositories.py  test_repositories_layout.py  test_undo_manager.py  test_version_manager.py
tests/ui/: test_about_dialog.py  test_audit_trail_view.py  test_bug_report_dialog.py  test_chart_renderer.py  test_dashboard_view.py  test_data_table.py  test_duplicate_engagement_dialog.py  test_export_audit_pdf_dialog.py  test_export_excel_report_dialog.py  test_export_html_report_dialog.py  test_export_sample_dialog.py  test_export_target_widget.py  test_first_run_wizard.py  test_import_options_dialog.py  test_main_controller.py  test_main_entry.py  test_main_window.py  test_new_engagement_dialog.py  test_progress_dialog.py  test_recent.py  test_sampling_dialog.py  test_settings_dialog.py  test_settings_store.py  test_sidebar.py  test_tasks.py  test_worker.py
tests/unit/: test_cancellation.py  test_formatting.py  test_importer_coerce.py  test_io_charts.py  test_perf_probe_violations.py  test_platform_imports.py  test_resources.py  test_sampling.py  test_undo.py
