[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------
[project]
name = "sampling-tool"
version = "0.8.0"
description = "BDO Audit Sampling Tool – Python-Port des VBA-basierten Excel-Tools (ISAE 3402)."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [
    { name = "BDO Audit Team" },
]
keywords = ["audit", "sampling", "isae-3402", "bdo", "pyqt6"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: Other/Proprietary License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Accounting",
]

dependencies = [
    "PyQt6>=6.7",
    "pandas>=2.2",
    "openpyxl>=3.1",
    # python-calamine (Rust-basiert) ist seit Sprint 10.2 der Excel-Reader
    # im Import-Pfad – ca. 10–30× schneller als openpyxl, deutlich
    # geringerer RAM-Footprint. openpyxl bleibt für alle Exporter (Writes).
    "python-calamine>=0.2",
    "numpy>=2.0",
    "matplotlib>=3.8",
    "reportlab>=4.2",
    "pdfrw>=0.4",
    "jinja2>=3.1",
    "platformdirs>=4.0",
    # pywin32 nur auf Windows (für Outlook-Bug-Mail, COM-Integration)
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-qt>=4.4",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pypdf>=5.0",  # nur Tests: Inhalts-Verifikation für AuditTrail-PDF
]
build = [
    "pyinstaller>=6.10",
    "pillow>=10.0",
]

[project.scripts]
sampling-tool = "sampling_tool.__main__:main"

[project.urls]
Homepage = "https://www.bdo.at"

# ---------------------------------------------------------------------------
# Setuptools – src-Layout
# ---------------------------------------------------------------------------
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sampling_tool = [
    "ui/styles/*.qss",
    "persistence/migrations/*.sql",
]

# ---------------------------------------------------------------------------
# Ruff – Lint & Format
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = [".venv", "build", "dist", "exports"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
    "C90", # mccabe
    "PT",  # pytest-style
]
ignore = [
    "E501",    # line-too-long (formatter handles it)
    "RUF001",  # ambiguous unicode in strings – wir nutzen deutsche Typografie
    "RUF002",  # ambiguous unicode in docstrings
    "RUF003",  # ambiguous unicode in comments
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803", "N806"]  # snake_case rules looser in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ---------------------------------------------------------------------------
# Mypy – strict
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = [
    "PyQt6.*",
    "reportlab.*",
    "openpyxl.*",
    "python_calamine.*",
    "matplotlib.*",
    "win32com.*",
    "pythoncom.*",
    "pdfrw.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=sampling_tool",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: schnelle Unit-Tests ohne externe Abhängigkeiten",
    "integration: Integration mit DB / Filesystem / Excel",
    "ui: PyQt6-UI-Tests (benötigen pytest-qt)",
    "slow: Tests die mehr als 1s dauern",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:openpyxl.*",
]

[tool.coverage.run]
branch = true
source = ["src/sampling_tool"]
omit = ["*/__main__.py", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false
